# kubers-demo

./: 2080.yaml  Cargo.toml  README.md
kube-crd/: Cargo.toml  meetup-resource.yaml
kube-crd/src/: main.rs
kube-rs-slack/: Cargo.toml
kube-rs-slack/src/: main.rs
src/: main.rs
