[package]
name = "kube-rs-slack"
version = "0.1.0"
edition = "2018"
[dependencies]
kube = { version = "0.87.2", features = ["runtime"] }
kube-runtime = "0.87.2"
k8s-openapi = { version = "0.20.0", features = ["latest"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.23", features = ["json"] }  # Enable the json feature
schemars = "0.8"
futures-util = "0.3.30"

